# lab

./: .env  .gitignore  BUILD  Readme.md  WORKSPACE  deps.bzl  docker-compose.yaml  go.mod  go.sum  go_third_party.bzl
libs/types/: BUILD.bazel  go.mod  line.go  system.go  system_test.go
proto/line/: BUILD.bazel  line.proto  line.sh
services/lines/: BUILD.bazel  main.go
services/lines/lines/: BUILD.bazel  aggregate.go  aggregate_test.go  events.go
services/lines/server/: BUILD.bazel  server.go
services/systems/: BUILD.bazel  Dockerfile  config.go  main.go
services/systems/system/: BUILD.bazel  aggregate.go  aggregate_test.go  events.go
systems/: config.go  go.mod  go.sum  main.go
systems/system/: aggregate.go  aggregate_test.go  events.go
types/: domain.go  system.go
