load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "systems_lib",
    srcs = [
        "config.go",
        "main.go",
    ],
    importpath = "github.com/anchamber/lab/services/systems",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_eventstore_eventstore_client_go//esdb",
        "@com_github_pborman_uuid//:uuid",
    ],
)

go_binary(
    name = "systems",
    embed = [":systems_lib"],
    visibility = ["//visibility:public"],
)
